[package]
name = "redust"
version = "0.1.0"
authors = ["hienduyph"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "redust-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "redust-server"
path = "src/bin/server.rs"

[dependencies]
async-stream = "0.3.2"
atoi = "0.4.0"
bytes = "1.1.0"
structopt = "0.3.25"
tokio = { version = "1.15.0", features = ["full"] }
tokio-stream = "0.1.8"
tracing = "0.1.29"
tracing-futures = "0.2.5"
tracing-subscriber = "0.3.4"
log = "0.4.14"
env_logger = "0.9.0"
rocksdb = "0.17.0"

[dev-dependencies]
# Enable test-utilities in dev mode only. This is mostly for tests.
tokio = { version = "1.15.0", features = ["test-util"] }
